infrastructure/environments/fast-dev/gcp/us/cluster/namespaces/ingress/manifests/service-north-south-ingress.yml
# Created seperately from istio-gateway to prevent unneeded thrashing during
# istio blue/green upgrades. The network endpoint groups created by the native
# GKE neg controller and their attachment to a global load balancer by the
# autoneg controller take some time to tear down.
kind: Service
apiVersion: v1
metadata:
  name: north-south-ingress
  namespace: ingress
  annotations:
    # https://cloud.google.com/kubernetes-engine/docs/how-to/standalone-neg
    # produce internal network endpoint groups that route directly to pods
    cloud.google.com/neg: '{"exposed_ports":{"80":{}}}'
    # https://github.com/GoogleCloudPlatform/gke-autoneg-controller
    controller.autoneg.dev/neg: '{"backend_services":{"80":[{"name":"fast-dev-gcp-ingress","max_rate_per_endpoint":100}]}}'
    # used with gateway controller / cloud.google.com/app-protocols: '{"http":"80"}'
    # used with gateway controller / cloud.google.com/load-balancer-type: "Internal"
spec:
  selector:
    app: istio-gateway
  ports:
  - name: http
    port: 80
