infrastructure/environments/fast-dev/gcp/us/cluster/namespaces/ingress/manifests/gke-north-south-gateway.yml
# CURRENTLY UNUSED
# This resource provisions a global tls-terminating load balancer that can
# be configured with HTTPRoute resources.
# https://cloud.google.com/kubernetes-engine/docs/how-to/secure-gateway#secure-using-certificate-manager
# https://cloud.google.com/kubernetes-engine/docs/how-to/deploying-gateways#limitations
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: north-south
  namespace: ingress
  annotations:
    networking.gke.io/certmap: fast-dev-gcp
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
