infrastructure/environments/fast-dev/gcp/us/cluster/namespaces/ingress/manifests/istio-north-south-gateway.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: north-south
  namespace: ingress
spec:
  selector:
    istio: gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.fast.dev.wescaleout.cloud"
    - "*.au.fast.dev.wescaleout.cloud"
    - "*.gcp.fast.dev.wescaleout.cloud"
    - "*.gcp-au.fast.dev.wescaleout.cloud"
